--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "etec.com.gustavo.henrique.apputils"
-        minSdk 19
+        applicationId "etec.com.gustavo.henrique.appUtils"
+        minSdk 21
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -25,10 +25,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    // vai habilidar a proucura de Views
-    viewBinding {
-        enabled = true
-    }
 }
 
 dependencies {
@@ -36,8 +32,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.5.3'
-    implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
