--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="etec.com.gustavo.henrique.utilities">
+    package="etec.com.gustavo.henrique.appUtils">
 
     <application
         android:allowBackup="true"
